--- a/demos/treedemo/.settings/org.eclipse.core.resources.prefs
+++ b/demos/treedemo/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Mar 30 17:05:54 CST 2010
+#Sat Apr 10 16:52:47 CST 2010
 eclipse.preferences.version=1
+encoding//WebRoot/exttree/a.txt=UTF-8
 encoding/<project>=GBK
