--- a/demos/treedemo/.settings/org.eclipse.core.resources.prefs
+++ b/demos/treedemo/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
-#Sat Apr 10 16:52:47 CST 2010
+#Mon Apr 12 11:19:35 CST 2010
 eclipse.preferences.version=1
+encoding//WebRoot/extjs/tree.js=UTF-8
 encoding//WebRoot/exttree/a.txt=UTF-8
+encoding//WebRoot/exttree/tree.js=UTF-8
+encoding//WebRoot/exttress/a.js=UTF-8
 encoding/<project>=GBK
