--- a/demos/treedemo/WebRoot/WEB-INF/web.xml
+++ b/demos/treedemo/WebRoot/WEB-INF/web.xml
@@ -49,7 +49,7 @@
 	</filter-mapping>
 	<filter-mapping>
 		<filter-name>struts2-cleanup</filter-name>
-		<url-pattern>*.jsp</url-pattern>
+		<url-pattern>/struts/*</url-pattern>
 	</filter-mapping>
 	<filter>
 		<filter-name>struts2</filter-name>
