--- a/demos/treedemo/.settings/org.eclipse.core.resources.prefs
+++ b/demos/treedemo/.settings/org.eclipse.core.resources.prefs
@@ -1,7 +1,9 @@
-#Mon Apr 12 11:19:35 CST 2010
+#Tue Apr 13 13:22:56 CST 2010
 eclipse.preferences.version=1
 encoding//WebRoot/extjs/tree.js=UTF-8
+encoding//WebRoot/exttree/MyXhtml.txt=UTF-8
 encoding//WebRoot/exttree/a.txt=UTF-8
 encoding//WebRoot/exttree/tree.js=UTF-8
 encoding//WebRoot/exttress/a.js=UTF-8
+encoding//WebRoot/treetype/tree.js=UTF-8
 encoding/<project>=GBK
