--- a/demos/treedemo/WebRoot/WEB-INF/web.xml
+++ b/demos/treedemo/WebRoot/WEB-INF/web.xml
@@ -89,6 +89,11 @@
     <servlet-name>NavigateSaveServlet</servlet-name>
     <servlet-class>com.ada.dwr.NavigateSaveServlet</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>TreeHelpServlet</servlet-name>
+    <servlet-class>com.ada.servlet.TreeHelpServlet</servlet-class>
+  </servlet>
+
 
 
 
@@ -108,6 +113,10 @@
   <servlet-mapping>
     <servlet-name>NavigateSaveServlet</servlet-name>
     <url-pattern>/navigatesave</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>TreeHelpServlet</servlet-name>
+    <url-pattern>/treejsonwork</url-pattern>
   </servlet-mapping>
 
 	<welcome-file-list>
