--- a/trunk/goodwebdev/.settings/com.google.gdt.eclipse.core.prefs
+++ b/trunk/goodwebdev/.settings/com.google.gdt.eclipse.core.prefs
@@ -1,4 +1,5 @@
-#Tue Jul 20 09:14:45 CST 2010
+#Sat Jul 31 10:42:29 CST 2010
 eclipse.preferences.version=1
+jarsExcludedFromWebInfLib=
 warSrcDir=war
 warSrcDirIsOutput=true
