--- a/trunk/easycms/war/WEB-INF/web.xml
+++ b/trunk/easycms/war/WEB-INF/web.xml
@@ -1,18 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xmlns="http://java.sun.com/xml/ns/javaee"
-xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	version="2.5">
+	<listener>
+		<listener-class>com.jeeny.servlet.InitListener</listener-class>
+	</listener>
+	<!-- Struts2 configuration begin -->
+	<filter>
+		<filter-name>struts2-cleanup</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.ActionContextCleanUp</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>struts2-cleanup</filter-name>
+		<url-pattern>*.action</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>struts2-cleanup</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>struts2-cleanup</filter-name>
+		<url-pattern>*.huan</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>struts2</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.FilterDispatcher</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>*.action</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>*.html</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>*.huan</url-pattern>
+	</filter-mapping>
+	<!-- xmpp服务 -->
 	<servlet>
-		<servlet-name>Easycms</servlet-name>
-		<servlet-class>com.easycms.servlet.EasycmsServlet</servlet-class>
+		<servlet-name>xmppreceiver</servlet-name>
+		<servlet-class>com.jeeny.labs.xmpp.XmppReceiverServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>Easycms</servlet-name>
-		<url-pattern>/easycms</url-pattern>
+		<servlet-name>xmppreceiver</servlet-name>
+		<url-pattern>/_ah/xmpp/message/chat/</url-pattern>
 	</servlet-mapping>
+	<!-- xmpp服务 -->
+	<!-- 邮件服务 -->
+	<servlet>
+		<servlet-name>mailhandler</servlet-name>
+		<servlet-class>com.jeeny.labs.mail.MailHandlerServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>mailhandler</servlet-name>
+		<url-pattern>/_ah/mail/*</url-pattern>
+	</servlet-mapping>
+
+	<!-- 邮件服务 -->
+	<!--文章上传 -->
+	<servlet>
+		<servlet-name>File</servlet-name>
+		<servlet-class>com.jeeny.common.action.FileServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>File</servlet-name>
+		<url-pattern>/file/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UploadServlet</servlet-name>
+		<servlet-class>com.jeeny.common.action.UploadServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UploadServlet</servlet-name>
+		<url-pattern>/uploadwork/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>GetBlobImgServlet</servlet-name>
+		<servlet-class>com.jeeny.common.action.GetBlobImgServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>GetBlobImgServlet</servlet-name>
+		<url-pattern>/imagework/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>UpImageServlet</servlet-name>
+		<servlet-class>com.jeeny.common.action.UpImageServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UpImageServlet</servlet-name>
+		<url-pattern>/upimagework/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>TaskServlet</servlet-name>
+		<servlet-class>com.jeeny.labs.task.TaskServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>TaskServlet</servlet-name>
+		<url-pattern>/taskwork/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<servlet-name>Upload</servlet-name>
+		<servlet-class>com.jeeny.labs.blob.Upload</servlet-class>
+	</servlet>
+	<servlet>
+		<servlet-name>Serve</servlet-name>
+		<servlet-class>com.jeeny.labs.blob.Serve</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Upload</servlet-name>
+		<url-pattern>/upload*</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping>
+		<servlet-name>Serve</servlet-name>
+		<url-pattern>/serve*</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>dwr-invoker</servlet-name>
+		<servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
+		<init-param>
+			<param-name>debug</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>dwr-invoker</servlet-name>
+		<url-pattern>/dwr/*</url-pattern>
+	</servlet-mapping>
+	<filter>
+		<filter-name>appstats</filter-name>
+		<filter-class>com.google.appengine.tools.appstats.AppstatsFilter</filter-class>
+		<init-param>
+			<param-name>logMessage</param-name>
+			<param-value>Appstats available: /appstats/details?time={ID}</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>appstats</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<servlet>
+		<servlet-name>appstats</servlet-name>
+		<servlet-class>com.google.appengine.tools.appstats.AppstatsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>appstats</servlet-name>
+		<url-pattern>/appstats/*</url-pattern>
+	</servlet-mapping>
+
+	<!-- dwr configuration end -->
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>main.jsp</welcome-file>
 	</welcome-file-list>
 </web-app>
