--- a/trunk/SpringBlog/.classpath
+++ b/trunk/SpringBlog/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="client"/>
+	<classpathentry kind="src" path="api"/>
 	<classpathentry kind="con" path="com.google.appengine.eclipse.core.GAE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="war/WEB-INF/lib/org.springframework.aop-3.0.4.RELEASE.jar"/>
