--- a/trunk/shine/pom.xml
+++ b/trunk/shine/pom.xml
@@ -23,5 +23,11 @@
 			<optional>true</optional>
 			<version>4.8.2</version>
 		</dependency>
+		<dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+            <optional>true</optional>
+        </dependency>
 	</dependencies>
 </project>
