--- a/trunk/shine/pom.xml
+++ b/trunk/shine/pom.xml
@@ -7,8 +7,8 @@
 	<packaging>jar</packaging>
 	<name>shine Core Project</name>
 	<description>
-    java基础功能
-  </description>
+    java common
+    </description>
 	<version>2.0.3</version>
 	<dependencies>
 		<dependency>
@@ -24,10 +24,22 @@
 			<version>4.8.2</version>
 		</dependency>
 		<dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.1.1</version>
-            <optional>true</optional>
-        </dependency>
+			<groupId>commons-logging</groupId>
+			<artifactId>commons-logging</artifactId>
+			<version>1.1.1</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.14</version>
+		</dependency>
+		<dependency>
+			<groupId>hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>3.4.0.GA</version>
+		</dependency>
 	</dependencies>
+
+
 </project>
