--- a/adw/AndroidManifest.xml
+++ b/adw/AndroidManifest.xml
@@ -9,9 +9,9 @@
 	for the specific language governing permissions and ** limitations under 
 	the License. */ -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	android:sharedUserId="@string/sharedUserId" package="org.adw.launcher2">
+	android:sharedUserId="@string/sharedUserId" package="com.ada.desks">
 
-	<original-package android:name="org.adw.launcher2" />
+	<original-package android:name="com.ada.desks" />
 
 	<permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT"
 		android:permissionGroup="android.permission-group.SYSTEM_TOOLS"
@@ -187,10 +187,6 @@
 		<activity android:name="com.bwx.bequick.ShowSettingsActivity" android:label="Quick Settings"
 			android:icon="@drawable/ic_logo" android:launchMode="standard"
 			android:theme="@android:style/Theme.NoDisplay">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
 			<intent-filter>
 				<action android:name="android.intent.action.SEARCH_LONG_PRESS" />
 				<category android:name="android.intent.category.DEFAULT" />
