--- a/adw/.project
+++ b/adw/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>adw</name>
+	<name>androiddesk</name>
 	<comment></comment>
 	<projects>
 	</projects>
